Fix: ClassNotFoundException for org.glassfish.jaxb.runtime.v2.ContextFactory
ING-3267